Remove min-height from viewer to resolve gap in tablet break range (fixes #93)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -44,5 +44,4 @@ $breakpoints: (
     --wpdtrt-gallery-viewer-inset-header: 5px 12px;
     --wpdtrt-gallery-viewer-inset: 4px;
     --wpdtrt-gallery-viewer-inset-inverse: -4px;
-    --wpdtrt-gallery-viewer-desktop-height: 368px;
 }
